2nd link cannot be dragged out of Ambient Occlusion node's Color output after undo or reload. #60324

Closed
opened 2019-01-08 16:48:15 +01:00 by Demeter Dzadik · 5 comments
Member

{F6221233}System Information
Operating system: Win10

Blender Version
Broken:
2.80, 2edd32c168, blender2.8, 2019-01-06

If you drag a link from the Ambient Occlusion node's Color output, then cut this link, and then undo that cut, you will no longer be able to drag additional links out of the output pin. Instead, you will grab the existing link. The same thing happens without undo, if you simply save and reload the file.

Reproduction steps:
In the node editor, spawn an Ambient Occlusion node.
Method 1: Connect the color output to anything, cut the link, and then undo.
Method 2: Save and reload the blend.
Now whenever you try to drag from the Color output pin when there is already a link, you will be dragging the existing link, rather than creating a new one, which is the expected behaviour for input pins, but not for output pins.

For now the workaround to this is to drag from your desired output into the input pin.

{[F6221233](https://archive.blender.org/developer/F6221233/CarelessMediumCapybara.webm)}**System Information** Operating system: Win10 **Blender Version** Broken: 2.80, 2edd32c168d3, blender2.8, 2019-01-06 If you drag a link from the Ambient Occlusion node's Color output, then cut this link, and then undo that cut, you will no longer be able to drag additional links out of the output pin. Instead, you will grab the existing link. The same thing happens without undo, if you simply save and reload the file. **Reproduction steps**: In the node editor, spawn an Ambient Occlusion node. **Method 1**: Connect the color output to anything, cut the link, and then undo. **Method 2**: Save and reload the blend. Now whenever you try to drag from the Color output pin when there is already a link, you will be dragging the existing link, rather than creating a new one, which is the expected behaviour for input pins, but not for output pins. For now the workaround to this is to drag from your desired output into the input pin.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Brecht Van Lommel was assigned by Sebastian Parborg 2019-01-08 16:53:09 +01:00

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can reproduce this too. I'm guessing that some flags do not get properly reset on undo/reload.

I can reproduce this too. I'm guessing that some flags do not get properly reset on undo/reload.

This issue was referenced by 1c42f1c5ca

This issue was referenced by 1c42f1c5ca52bedec9b016edcb5fc7ff75754509

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60324
No description provided.