Fix T60324: node linking UI bugs with some shader nodes.